Documentation: avoid breaking literals
Configure inlined literals to avoid wrapping so that various commands
and configuration options do not look odd with breaks in paragraph/table
cells.

--- a/Documentation/_static/theme_overrides.css
+++ b/Documentation/_static/theme_overrides.css
@@ -24,3 +24,8 @@ h4, h5, h6 {
 table.colwidths-auto {
     width: 100%;
 }
+
+/* avoid wrapping literals */
+.literal {
+    white-space: nowrap;
+}
